Added plots and improved usability
Evaluated SBM detection from November 2021 to January 2022
Added Markdown cells instructions to the dataset maker notebook
Generated final V7.3 dataset for 2021
Generated plots on days with type III waves

--- a/SBM2_detection_dataset_maker.ipynb
+++ b/SBM2_detection_dataset_maker.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "284acab3",
+   "metadata": {},
+   "source": [
+    "__Import and function cells__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "3e077a28",
@@ -92,11 +100,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2be70b96",
+   "metadata": {},
+   "source": [
+    "__Data generator cells__\n",
+    "\n",
+    "Execute the cell with the correct years in the for loop or edit the list of years it goes through"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "c0684764",
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -396,7 +414,7 @@
     "WA_NR_EVENTS = []\n",
     "time = []\n",
     "Epoch = []\n",
-    "for i in [2020,2021]:\n",
+    "for i in [2020,2021,2022]:\n",
     "    [Fp21, WA_AMP_MED21, WA_NR_EVENTS21, time21, Epoch21] = all_dates_in_year(i)\n",
     "    Fp = np.append(Fp, Fp21)\n",
     "    WA_AMP_MED = np.append(WA_AMP_MED, WA_AMP_MED21)\n",
@@ -407,9 +425,404 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ae18ae7e",
+   "execution_count": 7,
+   "id": "46b8b654",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking 20220101_V\n",
+      "Checking 20220102_V\n",
+      "Checking 20220103_V\n",
+      "Checking 20220104_V\n",
+      "Checking 20220105_V\n",
+      "Checking 20220106_V\n",
+      "Checking 20220107_V\n",
+      "Checking 20220108_V\n",
+      "Checking 20220109_V\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Checking 20220112_V\n",
+      "Checking 20220113_V\n",
+      "Checking 20220114_V\n",
+      "Checking 20220115_V\n",
+      "Checking 20220116_V\n",
+      "Checking 20220117_V\n",
+      "Checking 20220118_V\n",
+      "Checking 20220119_V\n",
+      "Checking 20220120_V\n",
+      "Checking 20220121_V\n",
+      "Checking 20220122_V\n",
+      "Checking 20220123_V\n",
+      "Dir not found\n",
+      "Checking 20220125_V\n",
+      "Dir not found\n",
+      "Checking 20220127_V\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n",
+      "Dir not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "Fp = []\n",
+    "WA_AMP_MED = []\n",
+    "WA_NR_EVENTS = []\n",
+    "time = []\n",
+    "Epoch = []\n",
+    "for i in [2022]:\n",
+    "    [Fp21, WA_AMP_MED21, WA_NR_EVENTS21, time21, Epoch21] = all_dates_in_year(i)\n",
+    "    Fp = np.append(Fp, Fp21)\n",
+    "    WA_AMP_MED = np.append(WA_AMP_MED, WA_AMP_MED21)\n",
+    "    WA_NR_EVENTS = np.append(WA_NR_EVENTS, WA_NR_EVENTS21)\n",
+    "    time = np.append(time, time21)\n",
+    "    Epoch = np.append(Epoch, Epoch21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ae18ae7e",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -721,65 +1134,65 @@
       "Checking 20211031_V\n",
       "Checking 20211101_V\n",
       "Checking 20211102_V\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n",
-      "Dir not found\n"
+      "Checking 20211103_V\n",
+      "Checking 20211104_V\n",
+      "Checking 20211105_V\n",
+      "Checking 20211106_V\n",
+      "Checking 20211107_V\n",
+      "Checking 20211108_V\n",
+      "Checking 20211109_V\n",
+      "Checking 20211110_V\n",
+      "Checking 20211111_V\n",
+      "Checking 20211112_V\n",
+      "Checking 20211113_V\n",
+      "Checking 20211114_V\n",
+      "Checking 20211115_V\n",
+      "Checking 20211116_V\n",
+      "Checking 20211117_V\n",
+      "Checking 20211118_V\n",
+      "Checking 20211119_V\n",
+      "Checking 20211120_V\n",
+      "Checking 20211121_V\n",
+      "Checking 20211122_V\n",
+      "Checking 20211123_V\n",
+      "Checking 20211124_V\n",
+      "Checking 20211125_V\n",
+      "Checking 20211126_V\n",
+      "Checking 20211127_V\n",
+      "Checking 20211128_V\n",
+      "Checking 20211129_V\n",
+      "Checking 20211130_V\n",
+      "Checking 20211201_V\n",
+      "Checking 20211202_V\n",
+      "Checking 20211203_V\n",
+      "Checking 20211204_V\n",
+      "Checking 20211205_V\n",
+      "Checking 20211206_V\n",
+      "Checking 20211207_V\n",
+      "Checking 20211208_V\n",
+      "Checking 20211209_V\n",
+      "Checking 20211210_V\n",
+      "Checking 20211211_V\n",
+      "Checking 20211212_V\n",
+      "Checking 20211213_V\n",
+      "Checking 20211214_V\n",
+      "Checking 20211215_V\n",
+      "Checking 20211216_V\n",
+      "Checking 20211217_V\n",
+      "Checking 20211218_V\n",
+      "Checking 20211219_V\n",
+      "Checking 20211220_V\n",
+      "Checking 20211221_V\n",
+      "Checking 20211222_V\n",
+      "Checking 20211223_V\n",
+      "Checking 20211224_V\n",
+      "Checking 20211225_V\n",
+      "Checking 20211226_V\n",
+      "Checking 20211227_V\n",
+      "Checking 20211228_V\n",
+      "Checking 20211229_V\n",
+      "Checking 20211230_V\n",
+      "Checking 20211231_V\n"
      ]
     }
    ],
@@ -803,7 +1216,7 @@
    "execution_count": 8,
    "id": "455dab70",
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1195,78 +1608,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "285ef6fd",
+   "cell_type": "markdown",
+   "id": "53463e34",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2825482,)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "Epoch.shape"
+    "__Saving cell below__\n",
+    "\n",
+    "Change the file name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "20237c7a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2825482,)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "time.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "ed314351",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2825482,)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Fp.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "587add6c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save data\n",
-    "with open('SBM2_data_2020_V7.3_final.pickle', 'wb') as f:\n",
+    "filename = 'SBM2_data_2022_V7.3.pickle'\n",
+    "\n",
+    "with open(filename, 'wb') as f:\n",
     "    pickle.dump([Fp, WA_AMP_MED, WA_NR_EVENTS, time, Epoch], f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7adc5a6",
+   "metadata": {},
+   "source": [
+    "__Read cell below__ \n",
+    "\n",
+    "no use for it here"
    ]
   },
   {
