--- a/SBM2 configuration evaluator.ipynb
+++ b/SBM2 configuration evaluator.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "fd4a8fa4",
    "metadata": {},
    "outputs": [],
@@ -175,13 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "0588fc3d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading data\n",
-    "with open('SBM2_data_2021_V7.3.pickle', 'rb') as f:\n",
+    "with open('SBM2_data_2022_V7.3.pickle', 'rb') as f:\n",
     "    FP, AMP, NR, time, Epoch = pickle.load(f)\n",
     "rua=1"
    ]
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "18553bdf",
    "metadata": {},
    "outputs": [
@@ -257,17 +257,45 @@
       "incorrect: 2021/10/07 - 15:24:22\n",
       "correct: 2021/10/09 - 07:04:51\n",
       "correct: 2021/10/28 - 16:41:40\n",
+      "check 2021/11/27 - 00:42:14\n",
+      "check 2021/11/27 - 04:27:30\n",
+      "check 2021/11/27 - 23:56:09\n",
       "Total correct triggers: 12\n",
-      "Total incorrect triggers: 3\n",
+      "Total incorrect triggers: 6\n",
       "----------------------------------\n",
       "Correct time in SBM2 mode: 86400s\n",
-      "Inorrect time in SBM2 mode: 21600s\n",
-      "Accuracy 0.80\n"
+      "Inorrect time in SBM2 mode: 43200s\n",
+      "Accuracy 0.67\n"
      ]
     }
    ],
    "source": [
     "evaluate(flown_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "42169f68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not evaluating on data between Jan 20. 2021 - Mar 19. 2021\n",
+      "check 2022/01/18 - 18:41:44\n",
+      "Total correct triggers: 0\n",
+      "Total incorrect triggers: 1\n",
+      "----------------------------------\n",
+      "Correct time in SBM2 mode: 0s\n",
+      "Inorrect time in SBM2 mode: 7200s\n",
+      "Accuracy 0.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(flown_1)\n"
    ]
   },
   {
